# zb-lightbulb

./: .gitignore  README.md  light_bulb.code-workspace  zb-workspace.dwf3work
blinky/src/: main.c
light_bulb/: prj.conf  sample.yaml
light_bulb/nrf52840-dongle/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  partitions.yml  pm.config
light_bulb/nrf52840-dongle/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
light_bulb/nrf52840-dongle/modules/CANopenNode/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/TraceRecorder/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/civetweb/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/cmsis/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/connectedhomeip/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/fatfs/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/hal_nordic/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/loramac-node/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/lvgl/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/mbedtls/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/mcuboot/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/memfault-firmware-sdk/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/nanopb/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/nrf/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/nrf_hw_models/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/nrfxlib/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/openthread/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/pelion-dm/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/segger/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/st/: cmake_install.cmake
light_bulb/nrf52840-dongle/modules/trusted-firmware-m/: cmake_install.cmake
light_bulb/nrf52840-dongle/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  linker_zephyr_prebuilt.cmd.dep  nrf52840dongle_nrf52840.dts.pre.tmp  runners.yaml  zephyr.dts
light_bulb/nrf52840-dongle/zephyr/arch/: cmake_install.cmake
light_bulb/src/: main.c
light_bulb_dongle/: CMakeLists.txt  prj.conf
light_bulb_dongle/boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay
light_bulb_dongle/src/: main.c  usb_logging.c  usb_logging.h  zb_ha_occupancy_sensor.h  zb_ha_on_off_switch.h  zb_zcl_occupancy_sensing_addons.h  zb_zcl_on_off_switch_conf_addons.h  zcl_occupancy_sensing.c  zcl_occupancy_sensing_2.h
light_bulb_dongle/src/button_press_handler/: button_press_handler.c  button_press_handler.h
light_bulb_dongle/src/gpio/: gpio.c  gpio.h
light_bulb_dongle/src/zboss_ext/: zboss_api_af_ext.h
light_bulb_dongle/test/: CMakeLists.txt  button_press_handler_test.c  prj.conf
light_bulb_dongle/test/src/: button_press_handler_test.c
light_switch2/: prj.conf
light_switch2/src/: main.c
(+77 files in other folders)
